cluster/kubeseal-ui/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kubeseal-ui-strip-api
  namespace: cluster
  labels:
    app.kubernetes.io/name: kubeseal-ui
    app.kubernetes.io/part-of: kubeseal-ui
spec:
  stripPrefix:
    prefixes:
      - /api

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubeseal-ui
  labels:
    app.kubernetes.io/name: kubeseal-ui
    app.kubernetes.io/part-of: kubeseal-ui
spec:
  entryPoints:
    - http
    - https
  routes:
    - match: Host(`sealer.ygnv.my.id`) && PathPrefix(`/api`)
      kind: Rule
      middlewares:
        - name: kubeseal-ui-strip-api
          namespace: cluster
      services:
        - name: kubeseal-ui-api
          port: 8080
    - match: Host(`sealer.ygnv.my.id`)
      kind: Rule
      services:
        - name: kubeseal-ui
          port: 80
  tls: {}
